--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "dev": "nodemon ./server.js localhost 80",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "debug": "nodemon --inspect ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,16 @@
   "homepage": "https://github.com/bbachi/angular-nodejs-example#readme",
   "dependencies": {
     "angular": "^1.8.0",
+    "body-parser": "~1.17.1",
     "boostrap": "^2.0.0",
-    "express": "^4.17.1",
+    "cookie-parser": "^1.4.5",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "request": "^2.88.2",
     "tslint": "^6.1.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1000.5",
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
