--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jquery": "^3.5.1",
+    "pg": "^8.3.3",
+    "postgres": "^1.0.2",
     "request": "^2.88.2",
     "tslint": "^6.1.3"
   },
