--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "dev": "nodemon ./server.js localhost 80",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "node fix.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,7 @@
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.1",
     "nodemon": "^2.0.2",
-    "webpack": "^4.44.1",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.12",
     "webpack-stream": "^5.2.1"
   }
