--- a/package.json
+++ b/package.json
@@ -22,9 +22,17 @@
   "homepage": "https://github.com/bbachi/angular-nodejs-example#readme",
   "dependencies": {
     "angular": "^1.8.0",
+    "body-parser": "^1.19.0",
     "boostrap": "^2.0.0",
     "express": "^4.17.1",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "morgan": "~1.8.1",
+    "node-postgres": "^0.6.2",
+    "pg": "^8.2.1",
+    "popper.js": "^1.16.1",
+    "postgres-pool": "^3.1.2",
+    "request": "^2.88.2",
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "del": "^5.1.0",
