--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "body-parser": "^1.19.0",
     "boostrap": "^2.0.0",
     "express": "^4.17.1",
-    "tslint": "^6.1.3",
-    "morgan": "~1.8.1",
+    "morgan": "^1.10.0",
     "node-postgres": "^0.6.2",
     "pg": "^8.2.1",
     "popper.js": "^1.16.1",
