--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "webpack",
     "dev": "nodemon ./server.js localhost 80",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "postinstall": "node fix.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
